# two-phase-galaxy-model

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
docs/: galaxy_model.ipynb  star_cluster_model.ipynb
docs/example_data/: example_tree.hdf5  subhalo-tree.drawio
site-info/: logo.psb
src/two_phase_galaxy_model/: __init__.py
src/two_phase_galaxy_model/recipes/: __init__.py  abc.py  galaxy_model.py  model.py  preproc.py  star_cluster_model.py  subclouds.py  subhalos.py
src/two_phase_galaxy_model/samples/: __init__.py  loaders.py
src/two_phase_galaxy_model/utils/: __init__.py  algorithm.py  sampling.py
tests/test_two_phase_galaxy_model/: test_star_cluster_model.py
